[package]
authors = ["SunspotsInys <inysuay@gmail.com>"]
description = "An extremely simple log library."
edition = "2021"
keywords = ["log", "qiu"]
license-file = "LICENSE"
name = "qog"
repository = "https://github.com/inysc/qog-rs"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "^0.4", features = ["std"]}
